--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-
+    <link rel="stylesheet" href="/styles/article-tweets.css" type="text/css" />
 
 
     <!-- External JS -->
@@ -39,9 +39,8 @@
 
     <header>
       <div class = "avatar">
-          <img src="/images/profile-hex.png"> 
+          <img id="header-avatar" src="/images/profile-hex.png"> 
       </div>
-      <br>
       <div class = "name">
           <h2>Your Name</h2>
       </div>
@@ -50,7 +49,6 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
     <section class="new-tweet">
-      <h2>Compose Tweet</h2>
       <form id="userInput" method="POST" action="/tweets/">
         <label for="tweet-text">What are you humming about?</label>
         <textarea class="text-area" placeholder="new tweet" name="text" id="tweet-text"></textarea>
@@ -60,6 +58,32 @@
         </div>
       </form>
     </section>
+
+    <section >       
+        <article class="tweets">
+          <header>
+            <div class ="tweets.header-left">
+                <img src="https://i.imgur.com/nlhLi3I.png">
+                <h2>UserName</h2>
+            </div>
+            <div class = "userAccount">
+                <h2>UserAccount</h2>
+            </div>
+          </header> 
+          <p>
+            If I have seen further it is by standing on the shoulders of giants.
+          </p>                 
+          <footer>
+            <p>2 days ago</p>
+            <div class="icon">
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-flag"></i>
+            </div>
+
+          </footer>
+        </article>
+     </section>
   </main>
   </body>
 </html>
