--- a/public/index.html
+++ b/public/index.html
@@ -36,13 +36,14 @@
         <i class="fas fa-angle-double-down"></i>
       </div>
     </nav>
-
+    
     <header>
+
       <div class = "avatar">
           <img id="header-avatar" src="/images/profile-hex.png"> 
       </div>
       <div class = "name">
-          <h2>Your Name</h2>
+          <span>Your Name</span>
       </div>
   </header>
 
@@ -59,31 +60,38 @@
       </form>
     </section>
 
-    <section >       
+    <section class="tweetsContainer">       
         <article class="tweets">
-          <header>
-            <div class ="tweets.header-left">
+          <header class="tweets-header">
+            <div class ="tweets-header-left">
                 <img src="https://i.imgur.com/nlhLi3I.png">
-                <h2>UserName</h2>
+                <span>UserName</span>
             </div>
             <div class = "userAccount">
-                <h2>UserAccount</h2>
+                <span>UserAccount</span>
             </div>
           </header> 
-          <p>
+          <div class='text'>
             If I have seen further it is by standing on the shoulders of giants.
-          </p>                 
+          </div>                 
           <footer>
-            <p>2 days ago</p>
-            <div class="icon">
-              <i class="fas fa-retweet"></i>
-              <i class="fas fa-heart"></i>
-              <i class="fas fa-flag"></i>
+            <div class="footerDisplay">
+              <p>2 days ago</p>
+              <div class="icon">
+                <i class="fas fa-retweet"></i>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-flag"></i>
+            </div>
             </div>
 
           </footer>
         </article>
      </section>
+ 
+
+ 
+
+
   </main>
   </body>
 </html>
