--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,22 @@
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,300;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      type="text/css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,300;1,600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -18,80 +29,80 @@
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/article-tweets.css" type="text/css" />
 
-
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script
+      type="text/javascript"
+      src="/scripts/composer-char-counter.js"
+    ></script>
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <nav >
-      <span class = "logo">Tweeter</span>
+    <nav>
+      <span class="logo">Tweeter</span>
       <div class="rightTop">
-        <span class = "newTweet"><b>Write</b> a new tweet</span>
+        <span class="newTweet"><b>Write</b> a new tweet</span>
         <i class="fas fa-angle-double-down"></i>
       </div>
     </nav>
-    
-    <header>
 
-      <div class = "avatar">
-          <img id="header-avatar" src="/images/profile-hex.png"> 
+    <header>
+      <div class="avatar">
+        <img id="header-avatar" src="/images/profile-hex.png" />
       </div>
-      <div class = "name">
-          <span>Your Name</span>
+      <div class="name">
+        <span>Your Name</span>
       </div>
-  </header>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-    <section class="new-tweet">
-      <form id="userInput" method="POST" action="/tweets/">
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea class="text-area" placeholder="new tweet" name="text" id="tweet-text"></textarea>
-        <div>
-          <button type="submit">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
-      </form>
-    </section>
+      <section class="new-tweet">
+        <form id="userInput" method="POST" action="/tweets/">
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea
+            class="text-area"
+            placeholder="new tweet"
+            name="text"
+            id="tweet-text"
+          ></textarea>
+          <div>
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
 
-    <section class="tweetsContainer">       
+      <section class="tweetsContainer">
         <article class="tweets">
           <header class="tweets-header">
-            <div class ="tweets-header-left">
-                <img src="https://i.imgur.com/nlhLi3I.png">
-                <span>UserName</span>
+            <div class="tweets-header-left">
+              <img src="https://i.imgur.com/nlhLi3I.png" />
+              <span>UserName</span>
             </div>
-            <div class = "userAccount">
-                <span>UserAccount</span>
+            <div class="userAccount">
+              <span>UserAccount</span>
             </div>
-          </header> 
-          <div class='text'>
+          </header>
+          <div class="text">
             If I have seen further it is by standing on the shoulders of giants.
-          </div>                 
+          </div>
           <footer>
             <div class="footerDisplay">
               <p>2 days ago</p>
               <div class="icon">
+                <i class="fas fa-flag"></i>
                 <i class="fas fa-retweet"></i>
                 <i class="fas fa-heart"></i>
-                <i class="fas fa-flag"></i>
+              </div>
             </div>
-            </div>
-
           </footer>
         </article>
-     </section>
- 
-
- 
-
-
-  </main>
+      </section>
+    </main>
   </body>
 </html>
