fixed new tweets unshow bugs

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         <img id="header-avatar" src="/images/profile-hex.png" />
       </div>
       <div class="name">
-        <span>Your Name</span>
+        <span>Amy Mansell</span>
       </div>
     </header>
 
@@ -67,10 +67,10 @@
     <main class="container">
       <section class="new-tweet">
         <form id="userInput" method="POST" action="/tweets/">
-          <label for="tweet-text">What are you humming about?</label>
+          <!-- <label for="tweet-text">What are you humming about?</label> -->
           <textarea
             class="text-area"
-            placeholder="new tweet"
+            placeholder="What are you humming about?"
             name="text"
             id="tweet-text"
           ></textarea>
