--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
       <section class="new-tweet">
         <form id="userInput" method="POST" action="/tweets/">
           <!-- <label for="tweet-text">What are you humming about?</label> -->
+          <label id="alert"></label>;
           <textarea
             class="text-area"
             placeholder="What are you humming about?"
