--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Meta Information -->
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
@@ -68,7 +69,7 @@
       <section class="new-tweet">
         <form id="userInput" method="POST" action="/tweets/">
           <!-- <label for="tweet-text">What are you humming about?</label> -->
-          <label id="alert"></label>;
+          <label id="alert-info"></label>
           <textarea
             class="text-area"
             placeholder="What are you humming about?"
