finished reponsive version, still have a couple of bugs need to fix

--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,7 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.6.7/jquery.timeago.min.js" integrity="sha512-RlGrSmkje9EE/FXpJKWf0fvOlg4UULy/blvNsviBX9LFwMj/uewXVoanRbxTIRDXy/0A3fBQppTmJ/qOboJzmA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/2.0.2/timeago.min.js" integrity="sha512-sl01o/gVwybF1FNzqO4NDRDNPJDupfN0o2+tMm4K2/nr35FjGlxlvXZ6kK6faa9zhXbnfLIXioHnExuwJdlTMA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/2.0.2/timeago.js" integrity="sha512-N3oYWQZs8pMSQhQtB13XHSIry/zDIUimpMqX4QMULawuaAYgRWSiU17cLHh7f51xgkGY18jQtY2ph98HtKeWaA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/2.0.2/timeago.locales.min.js" integrity="sha512-Ern3V9KogyU2Y8PxtQPiKB5A2piG0jCZJ0Rmd9g1aWwk7JwRcfUVkIkW3M7CjoCFMqWtXMUmurTa2dSrdtaZLg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- <script type="text/javascript" src="/scripts/timeago.js"></script> -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script
       type="text/javascript"
@@ -55,7 +50,7 @@
       </div>
     </nav>
 
-    <header>
+    <header class="main-header">
       <div class="avatar">
         <img id="header-avatar" src="/images/profile-hex.png" />
       </div>
@@ -68,7 +63,6 @@
     <main class="container">
       <section class="new-tweet">
         <form id="userInput" method="POST" action="/tweets/">
-          <!-- <label for="tweet-text">What are you humming about?</label> -->
           <label id="alert-info"></label>
           <textarea
             class="text-area"
@@ -82,32 +76,7 @@
           </div>
         </form>
       </section>
-
       <section class="tweetsContainer">
-        <article class="tweets">
-          <header class="tweets-header">
-            <div class="tweets-header-left">
-              <img src="https://i.imgur.com/nlhLi3I.png" />
-              <span>UserName</span>
-            </div>
-            <div class="userAccount">
-              <span>UserAccount</span>
-            </div>
-          </header>
-          <div class="text">
-            If I have seen further it is by standing on the shoulders of giants.
-          </div>
-          <footer>
-            <div class="footerDisplay">
-              <p>2 days ago</p>
-              <div class="icon">
-                <i class="fas fa-flag"></i>
-                <i class="fas fa-retweet"></i>
-                <i class="fas fa-heart"></i>
-              </div>
-            </div>
-          </footer>
-        </article>
       </section>
     </main>
   </body>
