added toggle 2 and nav arrow animation

--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,9 @@
       </section>
       <section class="tweetsContainer">
       </section>
+      <div id="back-top">
+        <i class="fas fa-arrow-circle-up"></i>
+      </div>
     </main>
   </body>
 </html>
