fixed the camel cases in css files and added new animation for buttom scroll top button

--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class="logo">Tweeter</span>
-      <div class="rightTop">
-        <span class="newTweet"><b>Write</b> a new tweet</span>
+      <div class="right-top">
+        <span class="new-tweets"><b>Write</b> a new tweet</span>
         <i class="fas fa-angle-double-down"></i>
       </div>
     </nav>
@@ -60,7 +60,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <form id="userInput" method="POST" action="/tweets/">
+        <form id="user-input" method="POST" action="/tweets/">
           <label id="alert-info"></label>
           <textarea
             class="text-area"
@@ -74,7 +74,7 @@
           </div>
         </form>    
       </section>
-      <section class="tweetsContainer">
+      <section class="tweets-container">
       </section>
       <div id="back-top">
         <i class="fas fa-arrow-circle-up"></i>
