change the compose tweet botton to arrow icon

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,9 @@
       <span class="logo">Tweeter</span>
       <div class="right-top">
         <span class="new-tweets"><b>Write</b> a new tweet</span>
-        <i class="fas fa-angle-double-down"></i>
+        <div id="trigger">
+          <i class="fas fa-angle-double-down"></i>
+        </div>
       </div>
     </nav>
 
